# rust-library

./: Cargo.toml  README.md
deser/: Cargo.toml
deser/src/: lib.rs
examples/: 10_writing_to_file.rs  11_reading_from_file.rs  12_chrono.rs  1_intro.rs  4_tuples.rs  5_structs.rs  7_nested_structures.rs  8_generic_values.rs  9_attributes.rs  contents.io
examples/1. intro/: Cargo.toml
examples/10. writing to file/: Cargo.toml
examples/10. writing to file/src/: main.rs
examples/11. reading from file/: Cargo.toml
examples/12. chrono/: Cargo.toml
examples/2. primitives/: Cargo.toml
examples/2. primitives/src/: main.rs
examples/3. arrays/: Cargo.toml
examples/4. tuple/: Cargo.toml
examples/5. structs/: Cargo.toml
examples/6. enums/: Cargo.toml
examples/7. nested structures/: Cargo.toml
examples/8. generic values/: Cargo.toml
examples/9. attributes/: Cargo.toml
examples/basic_enum/: Cargo.toml
examples/basic_struct/: Cargo.toml
examples/chrono_feature/: Cargo.toml
examples/generic_values/: Cargo.toml
examples/primitive_types/: Cargo.toml
examples/reading_from_file/: Cargo.toml
examples/saving_to_file/: Cargo.toml
examples/struct_with_enum/: Cargo.toml
examples/tuple_type/: Cargo.toml
io_deser/: Cargo.toml
io_deser/src/: fields_processing.rs  lib.rs
io_deser/src/enum_type/: mod.rs
io_deser/src/fields_ordering/: mod.rs
io_deser/src/fields_renaming/: mod.rs
io_deser/src/struct_type/: mod.rs
io_deser/src/unit_struct/: mod.rs
iodeser_derive/: Cargo.toml
src/: lib.rs
src/arrays/: mod.rs
src/errors/: mod.rs
src/map/: mod.rs
src/misc/: mod.rs
src/others/: mod.rs
src/primitives/: mod.rs
src/references/: mod.rs
src/sets/: mod.rs
src/times/: mod.rs
src/tuples/: mod.rs
tests/: compare.rs  enums.rs  errors_tests.rs  io_deserialization_tests.rs  io_serialization_tests.rs  lifetimes.rs  primitives.rs  references_tests.rs  structs_tests.rs  tabulators.rs  time_testing.rs  tuple_structs.rs
(+14 files in other folders)
