[package]
name = "iodeser"
version = "0.3.0"
authors = ["Io-Maciek"]
description = "Crate that allows to read from and write to .io file format."
keywords = ["io", "file-format", "serialization", "deserialization"]
edition = "2021"
repository = "https://github.com/IoDeSer/rust-library"
readme = "README.md"
license="MIT"

[lib]

[dependencies]
io_deser = { path="./io_deser", version = "0.3.0" }
paste = "1.0.14"
array-init = "2.1.0"