[package]
name = "iodeser"
version = "0.5.3"
authors = ["Io-Maciek"]
description = "Crate that allows to read from and write to .io file format."
keywords = ["io", "file-format", "serialization", "deserialization"]
edition = "2021"
repository = "https://github.com/IoDeSer/rust-library"
readme = "README.md"
license="MIT"

[lib]

[dependencies]
io_deser = {path="./io_deser", version = "0.5.3" }# 
paste = "1.0.15"
array-init = "2.1.0"
chrono = {version = "0.4.31", optional = true, features = ["serde"]}
serde_json = {version = "1.0.117", optional = true}
serde = { version = "1.0.189" , features = ["derive"], optional = true }