[package]
name = "io_deser"
version = "0.3.0"
authors = ["Io-Maciek"]
description = "Procedural macro crate for generating implementation of IoDeSer trait for structs"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"
license="MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

